[package]
name = "zookeeper-cache"
version = "0.1.2"
edition = "2021"
description = "ZooKeeper client cache"
homepage = "https://github.com/misssonder/zookeeper-cache-rust"
repository = "https://github.com/misssonder/zookeeper-cache-rust"
license = "MIT"
keywords = ["ZooKeeper", "Cache"]

[dependencies]
async-recursion = "1.1"
futures = "0.3"
petgraph = "0.6"
pin-project = "1.1"
thiserror = "1.0"
tokio = { version = "1.3", features = ["full"] }
tokio-util = "0.7"
zookeeper-client = "0.8"

[dev-dependencies]
testcontainers = "0.20"